# rust-snippets

rs01-functions/: Cargo.toml
rs01-functions/src/: main.rs
rs02-cliargs/: Cargo.toml
rs02-cliargs/src/: main.rs
rs03-clap-cli-tool/: Cargo.toml  build.rs  compl.bash
rs03-clap-cli-tool/src/: main.rs
rs04-files/: Cargo.toml  somefile.txt
rs04-files/src/: main.rs
rs05-map/: Cargo.toml
rs05-map/src/: main.rs
rs06-json/: Cargo.toml
rs06-json/src/: main.rs
rs07-call-c/: Cargo.toml  build.rs
rs07-call-c/C-prog/: Makefile
rs07-call-c/src/: main.rs
rs08-subprocess/: Cargo.toml  output_file.txt
rs08-subprocess/src/: main.rs
rs09-unix-sockets/: Cargo.toml
rs09-unix-sockets/src/: main.rs
