[package]
name = "piss-bucket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-v3 = "3.0.0-beta.1"
clap_complete = "4.1.3"
clap_generate = "3.0.3"

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_mangen = "0.2.9"
clap_autocomplete = { version = "0.4.1"}
clap_complete = "4.1.3"
clap_generate = "3.0.3"

